k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-svc
  namespace: ntt-devops
spec:
  selector:
    app: devops-api
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
