k8s/base/ingress-kong.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-ingress
  namespace: ntt-devops
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/plugins: key-auth-plugin
spec:
  rules:
    - http:
        paths:
          - path: /DevOps
            pathType: Prefix
            backend:
              service:
                name: devops-svc
                port:
                  number: 80
